# appveyor-macos-build-example

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml
.appveyor/: mac.sh
src/: main.cpp
